# Airflow-ETL

./: .gitignore  generate_dataset.py  pyproject.toml
app/: main.py  utils.py
app/core/extractors/: __init__.py  base.py  files.py
app/core/storages/: __init__.py  base.py  files.py
app/core/transformers/: __init__.py  base.py  common.py
app/schemas/: __init__.py  config_params.py
configs/: cfg.yaml
