[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confuse>=2.0.1",
    "duckdb>=1.1.3",
    "faker>=33.3.0",
    "fsspec>=2024.12.0",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
]
